# Dio_bank

./: README.md  pyproject.toml
instance/: blog.sqlite  dio_bank.sqlite
migrations/versions/: 5dd1026cd62a_add_active_attr_in_user.py  6aac62d1cbb2_initial_migration.py  8099c96b1b5e_initial_migration.py  a3c139e8650a_add_password_field.py
src/: app.py  config.py  db.py  utils.py
src/controllers/: auth.py  role.py  user.py
src/models/: __init__.py  base.py  post.py  role.py  user.py
tests/integration/: conftest.py
tests/integration/controllers/: test_user.py
tests/unit/: test_utils.py
